--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@types/react-router-dom": "^5.3.3",
     "axios": "^1.1.3",
     "dotenv": "^16.0.3",
+    "encrypt-with-password": "^1.0.0",
+    "ethereumjs-wallet": "^1.0.2",
     "ethers": "^5.7.2",
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
@@ -31,6 +33,7 @@
     "react-spinners": "^0.13.6",
     "react-toastify": "9.0.3",
     "typescript": "*",
+    "universal-cookie": "^4.0.4",
     "wagmi": "0.7.15",
     "web-vitals": "^2.1.4"
   },
@@ -75,6 +78,7 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-react": "^7.31.11",
-    "prettier": "^2.7.1"
+    "prettier": "^2.7.1",
+    "react-app-rewired": "^2.2.1"
   }
 }
