--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "@mui/icons-material": "^5.10.16",
     "@mui/material": "^5.10.16",
     "@mui/x-date-pickers": "^5.0.11",
+    "@mui/x-date-pickers-pro": "^5.0.11",
+    "@mui/x-license-pro": "^5.17.12",
     "@rainbow-me/rainbowkit": "^0.8.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
