--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "tigris-landing",
   "version": "0.1.0",
   "author": {
-    "name": "Tolmany"
+    "name": "Hederan"
   },
   "private": true,
   "dependencies": {
@@ -11,8 +11,6 @@
     "@mui/icons-material": "^5.10.16",
     "@mui/material": "^5.10.16",
     "@mui/x-date-pickers": "^5.0.11",
-    "@mui/x-date-pickers-pro": "^5.0.11",
-    "@mui/x-license-pro": "^5.17.12",
     "@rainbow-me/rainbowkit": "^0.8.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -20,6 +18,7 @@
     "@types/jest": "^27.5.2",
     "@types/node": "^16.11.65",
     "@types/react": "^18.0.25",
+    "@types/react-datepicker": "^4.8.0",
     "@types/react-dom": "^18.0.9",
     "@types/react-router-dom": "^5.3.3",
     "axios": "^1.1.3",
@@ -30,9 +29,12 @@
     "ethers": "^5.7.2",
     "highcharts": "^10.3.2",
     "highcharts-react-official": "^3.1.0",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.5.28",
     "jwt-decode": "^3.1.2",
     "lightweight-charts": "^3.8.0",
     "react": "^18.2.0",
+    "react-datepicker": "^4.8.0",
     "react-dom": "^18.2.0",
     "react-horizontal-scrolling-menu": "^3.2.3",
     "react-icons": "^4.6.0",
@@ -40,6 +42,7 @@
     "react-scripts": "5.0.1",
     "react-spinners": "^0.13.6",
     "react-toastify": "9.0.3",
+    "rsuite": "^5.23.3",
     "socket.io-client": "^4.5.4",
     "swiper": "^8.4.5",
     "typescript": "*",
