--- a/package.json
+++ b/package.json
@@ -15,11 +15,11 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.5.2",
-    "@types/node": "^16.11.65",
-    "@types/react": "^18.0.25",
+    "@types/jest": "^29.2.4",
+    "@types/node": "^18.11.17",
+    "@types/react": "^18.0.26",
     "@types/react-datepicker": "^4.8.0",
-    "@types/react-dom": "^18.0.9",
+    "@types/react-dom": "^18.0.10",
     "@types/react-router-dom": "^5.3.3",
     "axios": "^1.1.3",
     "dayjs": "^1.11.7",
@@ -33,6 +33,7 @@
     "jspdf-autotable": "^3.5.28",
     "jwt-decode": "^3.1.2",
     "lightweight-charts": "^3.8.0",
+    "os-browserify": "^0.3.0",
     "react": "^18.2.0",
     "react-datepicker": "^4.8.0",
     "react-dom": "^18.2.0",
@@ -45,16 +46,17 @@
     "rsuite": "^5.23.3",
     "socket.io-client": "^4.5.4",
     "swiper": "^8.4.5",
-    "typescript": "*",
+    "ts-loader": "^9.4.2",
+    "typescript": "^4.9.4",
     "universal-cookie": "^4.0.4",
     "wagmi": "0.7.15",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test",
+    "eject": "react-app-rewired eject",
     "lint": "eslint --ext .ts .",
     "lint:fix": "eslint --fix",
     "format": "prettier --config .prettierrc 'src/**/*.{js,jsx,ts,tsx,css,md,json}' --write"
@@ -83,6 +85,7 @@
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.44.0",
     "buffer": "^6.0.3",
+    "css-loader": "^6.7.3",
     "eslint": "^8.0.1",
     "eslint-config-prettier": "^8.5.0",
     "eslint-config-standard-with-typescript": "^23.0.0",
