--- a/package.json
+++ b/package.json
@@ -51,7 +51,8 @@
     "typescript": "^4.9.4",
     "universal-cookie": "^4.0.4",
     "wagmi": "0.7.15",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "webpack": "^5.75.0"
   },
   "scripts": {
     "start": "react-app-rewired start",
