--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "jwt-decode": "^3.1.2",
     "lightweight-charts": "^3.8.0",
     "os-browserify": "^0.3.0",
+    "process": "^0.11.10",
     "react": "^18.2.0",
     "react-datepicker": "^4.8.0",
     "react-dom": "^18.2.0",
