--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/react-dom": "^18.0.10",
     "@types/react-router-dom": "^5.3.3",
     "axios": "^1.1.3",
+    "browserify-cipher": "^1.0.1",
     "crypto-browserify": "^3.12.0",
     "dayjs": "^1.11.7",
     "dotenv": "^16.0.3",
