--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/react-datepicker": "^4.8.0",
     "@types/react-dom": "^18.0.10",
     "@types/react-router-dom": "^5.3.3",
+    "assert": "^2.0.0",
     "axios": "^1.1.3",
     "browserify-cipher": "^1.0.1",
     "crypto-browserify": "^3.12.0",
