--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "dayjs": "^1.11.7",
     "dotenv": "^16.0.3",
     "encrypt-with-password": "^1.0.0",
+    "ethereum-multicall": "^2.15.0",
     "ethereumjs-wallet": "^1.0.2",
     "ethers": "^5.7.2",
     "highcharts": "^10.3.2",
