--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "@mui/icons-material": "^5.10.16",
     "@mui/material": "^5.10.16",
     "@mui/x-date-pickers": "^5.0.11",
-    "@rainbow-me/rainbowkit": "^0.8.0",
+    "@rainbow-me/rainbowkit": "^0.8.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -54,7 +54,7 @@
     "ts-loader": "^9.4.2",
     "typescript": "^4.9.4",
     "universal-cookie": "^4.0.4",
-    "wagmi": "0.7.15",
+    "wagmi": "^0.9.0",
     "web-vitals": "^2.1.4",
     "webpack": "^5.75.0"
   },
