--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "jspdf-autotable": "^3.5.28",
     "jwt-decode": "^3.1.2",
     "lightweight-charts": "^3.8.0",
+    "moment": "^2.29.4",
     "os-browserify": "^0.3.0",
     "process": "^0.11.10",
     "react": "^18.2.0",
