--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "assert": "^2.0.0",
     "axios": "^1.2.4",
     "browserify-cipher": "^1.0.1",
+    "clipboard-copy": "^4.0.1",
     "crypto-browserify": "^3.12.0",
     "dayjs": "^1.11.7",
     "dotenv": "^16.0.3",
