--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/react-datepicker": "^4.8.0",
     "@types/react-dom": "^18.0.10",
     "@types/react-router-dom": "^5.3.3",
+    "@types/universal-cookie": "^3.0.0",
     "assert": "^2.0.0",
     "axios": "^1.2.4",
     "browserify-cipher": "^1.0.1",
