--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/react-datepicker": "^4.8.0",
     "@types/react-dom": "^18.0.10",
     "@types/react-router-dom": "^5.3.3",
+    "@types/recharts": "^1.8.24",
     "@types/universal-cookie": "^3.0.0",
     "assert": "^2.0.0",
     "axios": "^1.2.4",
@@ -52,6 +53,7 @@
     "react-scripts": "5.0.1",
     "react-spinners": "^0.13.6",
     "react-toastify": "9.0.3",
+    "recharts": "^2.4.1",
     "rsuite": "^5.23.3",
     "socket.io-client": "^4.5.4",
     "swiper": "^8.4.5",
